syntax = "proto3";
package proto;

/** represents the plugin-specific configuration string
*/
message ConfigureRequest {
    string configuration = 1;
}

/** represents a list of configuration problems found in the configuration string
*/
message ConfigureResponse {
    repeated string errorList = 1;
}

/** @exclude */
message GetPluginInfoRequest {}

/** represents the plugin metadata
*/
message GetPluginInfoResponse {
    string name = 1;
    string category = 2;
    string type = 3;
    string description = 4;
    string dateCreated = 5;
    string location = 6;
    string version = 7;
    string author = 8;
    string company = 9;
}
